Implement Shop System

--- a/Assets/Bluegravity/project/Script/Common/Bluegravity.Common.asmdef
+++ b/Assets/Bluegravity/project/Script/Common/Bluegravity.Common.asmdef
@@ -1,8 +1,9 @@
 {
-    "name": "Bluegravity.Character",
-    "rootNamespace": "Bluegravity.Character",
+    "name": "Bluegravity.Common",
+    "rootNamespace": "Bluegravity.Common",
     "references": [
-        "Bluegravity.Common"
+        "UnityEngine.UI",
+        "Bluegravity.Utility"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
